fixed errors everything good now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#products">Latest Products</a></li>
       <li><a href="#home">Home</a></li>
   </ul>
-    <img src="BM.png">
+    <img src="images/BM.png">
 </nav>
 
 <section id="home">
